# learning

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
_notes/ideas/: README.md
_notes/secrets/: README.md
algorithms/sort/bubblesort/: CMakeLists.txt  main.c
algorithms/sort/insertionsort/: main.c
algorithms/sort/template/: CMakeLists.txt  main.c
asciiart/figlet/: README.md  gitlabci.yml
buildroot/bbb/: bl_cfg  br-build-bbb.sh  br-config.sh  br-imager-bbb.sh
buildroot/stm32mp1/bootlin/: .gitignore  autobuild.sh  dotconfig  setup.sh
c/compilerflags/: CMakeLists.txt  Makefile  README.md
compression/zipbomb/: experiment.sh
crypto/genrandom/: README.md  benchmark.sh
dns/he/: README.md  dynupdate-curl.sh  dynupdate-lexicon.sh
docker/basics/: Dockerfile  README.md  gitlabci.yml
docker/buildroot/: Dockerfile  gitlabci.yml  run.sh
docs-autogen/mermaid/: README.md  flowchart.mmd  generate.sh  install.sh  multiple.mmd
elastic/gettingstarted/: docker-compose.yml  filebeat.yml
elastic/gettingstarted/logstash-config/: first-pipeline.conf  pipelines.yml
flask/jinja/: gen-docs.py  gitlabci.yml  template.html
git/bug-reproduce-1/: .gitignore  README.md  reproduce-bug.sh
git/clean/: gitclean.sh
gitlab/ci-directory/: README.md
gnu/gnu-hello/: README.md  gitlabci.yml
golang/: .gitignore
golang/ldaptest/: .gitignore  README.md  main.go
golang/webservice/: .gitignore  README.md  certs.go  script.sh  service.go
grafana/basic/: .gitignore  README.md  Vagrantfile
grafana/basic/rootfs/etc/collectd/: collectd-server.conf
grafana/basic/scripts/: setup_all_services.sh
grafana/iot-monitor/: README.md  Vagrantfile
grafana/iot-monitor/appserver/: docker-compose.yml  install.sh
grafana/iot-monitor/appserver/etc/: fluentd.conf
grafana/iot-monitor/device/: install.sh
grafana/iot-monitor/device/etc/: collectd.conf  fluentbit.conf
haproxy/tcp-http-tunnel/: README.md
imagemagick/jpeg2pdf/: pack.sh
letsencrypt/acmesh/: README.md  nginx-testconf  register.sh
letsencrypt/acmesh/www/: index.html
lfs/lfs/: build_lfs.sh  build_lfs_0.sh  build_lfs_1.sh  build_lfs_2.sh  build_lfs_3.sh
linux/crypt+verity/: create-lo.sh  create.sh
linux/dmcrypt/: README.md  create.sh
linux/dmverity/: create.sh
linux/lomount/: README.md  create.sh
linux/overlayfs/: README.md  create.sh
math/fun/: collatz.py  ec.py  montyhall.py
math/randomwalk/: randomstockwalk.py  randomvectorwalk.py
mbedtls/: .gitignore  pem2c.py
mqtt/mosquitto/clientcert/: .gitignore  README.md  Vagrantfile  connect.sh  generatersa.sh  learning.conf  mosquitto_deploy.sh  subscribe.sh
nginx/docker/: README.md
nginx/upload-minram/: .gitignore  README.md  run_test.sh  setup_system.sh  test.py
nginx/upload-minram/dut/: nginx.conf
openssl/benchmark/: README.md  run_benchmark.sh
openssl/pki/: README.md
qemu/tpm/: .gitignore  README.md  create_vm.sh  start_vm.sh  tpm-vm-oneoff.sh
raspi/floral-bonnet/: README.md  deploy.sh  floral-bonnet.service  main.py  raspi-setup.sh
repo/autotag/: README.md  autotag.sh  gitlabci.yml
rust/actixwebtest/: .gitignore  Cargo.toml  README.md
rust/actixwebtest/src/: main.rs
rust/ledserver/: .gitignore  Cargo.toml  README.md  deploy.sh
rust/ledserver/src/: main.rs
shell/bash/calculation/: parsecalc.sh
shell/bash/help-msg/: help.sh
shell/bash/path/: scriptdir.sh
solarcar/sat-tracker/: battery_calc.ipynb
ssh/prepopulate/: README.md  Vagrantfile  prepopulate.sh
ssh/proxyjump/: Vagrantfile  proxyjump.sh
ssh/tunneling/: forward.sh  reverse-access.sh  reverse-tunnel.sh
ssl/clientcert/: README.md  experiment.py  generatersa.sh
systemd/timer/: README.md  hello.service  hello.timer  install.sh
terraform/: .gitignore
terraform/azure/learn/: README.md  main.tf  terraform.tfvars  variables.tf
terraform/azure/multisite/: main.tf  variables.tf
terraform/azure/remotestate/: main.tf
tpm2/clevis/: .gitignore  clevis_test.sh
tpm2/compile/: README.md  Vagrantfile  build-tpm2-system.sh  build-tpm2.sh  install-deps.sh
tpm2/emulated/: README.md  Vagrantfile  tpm2_run.sh  tpm2_setup.sh
tpm2/notes/: tls-tpm.md
vagrant/docker/: Dockerfile  Vagrantfile  get_key.sh
vagrant/kvm/: Vagrantfile  start_vm.sh  system_setup.sh
vagrant/multimachine/: Vagrantfile
yocto/: .gitignore
yocto/bbb/: build.sh
yocto/bbb-repo/: build.sh
yocto/bbb-repo/conf/: bblayers.conf  local.conf
yocto/bbb/conf/: bblayers.conf  local.conf
yocto/bbb/layers/meta-bbb-experiments/: README
yocto/bbb/layers/meta-bbb-experiments/conf/: layer.conf
yocto/imx7-basic/: .gitignore  build.sh
yocto/imx7-browser/: build.sh
yocto/imx7-browser/conf/: bblayers.conf  local.conf
yocto/imx7-sabre/: build.sh
yocto/imx7-sabre/conf/: bblayers.conf  local.conf
yocto/noto-fonts/conf/: local.conf
yocto/stm32mp1/: openstlinux_local.conf  setup.sh
yocto/stm32mp1-browser/: setup.sh
yocto/stm32mp1-browser/conf/: bblayers.conf  local.conf
yocto/stm32mp1/conf/: bblayers.conf  local.conf
z3/sudokusolver/: README.md  killersudoku.py  playground.py  sudoku.py  sudokuthermo.py
zephyr/ble-scan/: zephyr-experiments.sh
